--- a/our_story.html
+++ b/our_story.html
@@ -13,6 +13,9 @@
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 	<!-- Template Basic Images End -->
 
 	<!-- Bootstrap (latest) Grid Styles Only -->
@@ -115,14 +118,17 @@
 			<div class="row">
 				<div class="col-md-21">
 					<div class="content">
-						<div class="owl-carousel owl-carousel1">
-							<img src="img/home_content.jpg" title="Tandem Building Corporation" alt="Tandem Building Corporation">
-							<img src="img/home_content.jpg" title="Tandem Building Corporation" alt="Tandem Building Corporation">
-							<img src="img/home_content.jpg" title="Tandem Building Corporation" alt="Tandem Building Corporation">
-							<img src="img/home_content.jpg" title="Tandem Building Corporation" alt="Tandem Building Corporation">
-						</div>						
-						<div class="h_cont_text">
-							….a higher degree of excellence.
+						<div class="our_story">
+							<h2>Our Story</h2>
+							<article>
+								<p>Matt Lines serves as Principal of Tandem Building Corporation.  From the earliest age, Matt’s pedigree pointed him towards construction as a career. His father is a licensed Architect with extensive Developer experience. Exposure to those fields provided the spark to attend the University of Florida where he earned a Bachelor of Science degree in Construction Management.</p>
+								<p>Prior to graduation, Matt was recruited by Morrison Homes for the position of Assistant Builder. After less than a year, he was promoted to Builder and oversaw all construction for several communities with up to thirty houses under construction at any one time.  This portion of his career provided a great foundation for <strong>scheduling</strong> the construction process.</p>
+								<p>After five years, Buzz Willis of Willis Construction Consulting offered Matt an Estimator position with his firm which was being used as the primary Cost Consultant on the new Universal Studios Islands of Adventure in Orlando. In this role, Matt was awarded the position of lead Estimator to Universal’s construction team for the Suess Landing theme. The challenge of pricing the unparalleled structures in that project provided a strong background in <strong>budgeting.</strong></p>
+								<p>With the completion of Universal Studios, the West Coast beckoned. Hayhoe Construction was starting construction for all structures necessary for development of the luxury community, The Bridges at Rancho Santa Fe. Matt joined the onsite Hayhoe team to become a part of building the nationally recognized Clubhouse and all accessory structures. This period provided a profound basis for Matt to execute <strong>high end construction.</strong></p>
+								<p>Upon completion of the Bridges, another segment of the industry showed a need so Matt and a partner founded a custom homebuilding company that would thrive until the downturn of 2008. The recession of 2008 had a silver lining as opportunity knocked once more through a position as Director of Development at Boot Ranch in Fredericksburg, Texas.</p>
+								<p>At Boot Ranch, Matt was tasked with overseeing all elements of development including horizontal infrastructure and vertical construction. Projects included a 9-mile pipeline to provide effluent water to the golf course, the award winning Clubhouse, new product offering of the Overlook Cabins, and the incomparable Ranch Club pool and tennis amenity.</p>
+								<p>No matter the challenge at hand or project to be completed, there is never a doubt where Matt’s heart is….residential homebuilding. From the days in college when he made the choice to pursue residential construction instead of commercial, Matt has always been charmed by the opportunity to build and fulfill the greatest dream of us all….our own home! We want to partner in making your vision come true through working in Tandem.</p>
+							</article>		
 						</div>
 					</div>
 					<a href="coming.html" class="h_cont_logo">
@@ -133,7 +139,7 @@
 			</div>
 		</div>
 	</section>
-	<footer>
+		<footer>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-10 col-sm-21 col-md-push-7 col-xs-21">
